force-app/main/default/objects/xDO_TTHAIR_Ticket__c/xDO_TTHAIR_Ticket__c.object-meta.xml
<CustomObject>
    <label>TTH Ticket</label>
    <nameField>
        <displayFormat>TK-{0000}</displayFormat>
        <label>Ticket #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>