force-app/main/default/objects/xDO_TTHAIR_Ticket__c/fields/xDO_TTHAIR_Booking_Class__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Booking_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>xDO_TTHAIR_Booking_Class__c</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>