force-app/main/default/objects/xDO_TTHAIR_Ticket__c/fields/xDO_TTHAIR_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Booking_Status__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Booking</fullName>
            </value>
            <value>
                <fullName>New Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>