force-app/main/default/objects/xDO_TTHAIR_Ticket__c/fields/xDO_TTHAIR_Contact__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>