force-app/main/default/objects/xDO_TTHAIR_Ticket__c/fields/xDO_TTHAIR_PAX__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_PAX__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAX</label>
    <referenceTo>xDO_TTHAIR_PAX__c</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>