force-app/main/default/objects/xDO_TTHAIR_Ticket__c/fields/xDO_TTHAIR_PNR__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_PNR__c</fullName>
    <label>PNR</label>
    <referenceTo>xDO_TTHAIR_PNR__c</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>