force-app/main/default/objects/xDO_TTHAIR_Ticket__c/fields/xDO_TTHAIR_Seat__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Seat__c</fullName>
    <label>Seat</label>
    <length>4</length>
    <type>Text</type>
</CustomField>