force-app/main/default/objects/xDO_TTHAIR_Ticket__c/fields/xDO_TTHAIR_Valid_UP_TO__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Valid_UP_TO__c</fullName>
    <label>Valid UP TO</label>
    <type>Date</type>
</CustomField>