force-app/main/default/objects/xDO_TTHAIR_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>xDO_TTHAIR_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>